--- a/scss/pages/_checkout.scss
+++ b/scss/pages/_checkout.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.cart-info + .cart-info {
+  margin-top: 30px;
+}
+
 .cart-info {
   padding: 30px;
   border-radius: 20px;
@@ -27,6 +31,65 @@
 
   &__list {
     margin-top: -30px;
+  }
+
+  &__bottom {
+    margin-top: 30px;
+  }
+
+  &__continue,
+  &__row {
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 144.444%;
+  }
+
+  &__continue {
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
+
+    &-link {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    &-icon {
+      rotate: 90deg;
+      transition: translate 0.3s;
+    }
+
+    &-link:hover &-icon {
+      translate: -5px;
+    }
+  }
+
+  &__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+
+    &-bold {
+      font-size: 2.2rem;
+      font-weight: 700;
+      line-height: 145.455%;
+    }
+  }
+
+  &__separate {
+    margin: 30px 0;
+    height: 1px;
+    background: #d2d1d6;
+  }
+
+  &__sub-label {
+    font-weight: 400;
+  }
+
+  &__next-btn {
+    margin-top: 30px;
   }
 }
 
@@ -119,5 +182,36 @@
     &:first-child {
       margin-right: 10px;
     }
+  }
+}
+
+.gift-item {
+  display: flex;
+  gap: 20px;
+
+  &__icon-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+
+    width: 76px;
+    height: 76px;
+    border-radius: 14px;
+
+    background: rgb(116, 66, 224, 0.1);
+    box-shadow: 0px 20px 60px 10px rgba(237, 237, 246, 0.2);
+  }
+
+  &__title {
+    font-size: 1.8rem;
+    font-weight: 500;
+    line-height: 144.444%;
+  }
+
+  &__desc {
+    margin-top: 10px;
+    font-size: 1.4rem;
+    line-height: 142.857%;
   }
 }
